Add fleet carriers
