# app/Http/Requests/SearchSystemRequest.php
@@ -2,12 +2,14 @@
 
 namespace App\Http\Requests;
 
+use Illuminate\Contracts\Validation\ValidationRule;
+
 class SearchSystemRequest extends ApiRequest
 {
     /**
      * Get the validation rules that apply to the request.
      *
-     * @return array<string, \Illuminate\Contracts\Validation\ValidationRule|array|string>
+     * @return array<string, ValidationRule|array|string>
      */
     public function rules(): array
     {
@@ -16,6 +18,7 @@ class SearchSystemRequest extends ApiRequest
             'withInformation' => 'sometimes|integer|max:1',
             'withBodies' => 'sometimes|integer|max:1',
             'withStations' => 'sometimes|integer|max:1',
+            'withFleetCarriers' => 'sometimes|integer|max:1',
             'exactSearch' => 'sometimes|integer|max:1',
             'limit' => 'sometimes|int|max:100',
         ];
